[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subformer"
version = "0.1.0"
description = "Official Python SDK for Subformer - AI-powered video dubbing and voice cloning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Subformer", email = "support@subformer.com" }
]
keywords = ["subformer", "video-dubbing", "voice-cloning", "tts", "ai", "translation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://subformer.com"
Documentation = "https://subformer.com/docs/api"
Repository = "https://github.com/subformer/subformer-python"
Issues = "https://github.com/subformer/subformer-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/subformer"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
